--- a/src/main/resources/templates/admin/authorForm.html
+++ b/src/main/resources/templates/admin/authorForm.html
@@ -8,7 +8,25 @@
 </head>
 <body>
     <div layout:fragment="admin">
-        <h1>Author form</h1>
+        <div class="container">
+        <form action="#" th:action="@{/author}" th:object="${author}" method="post">
+
+            <div class="form-group row mt-5">
+                <label for="name" class="col-sm-2 form-label">Name</label>
+                <div class="col-sm-8">
+                    <input id="name" th:field="*{name}" type="text" class="form-control">
+
+                    <p th:if="${#fields.errors('name')}" class="text-danger" th:errors="*{name}"></p>
+                </div>
+            </div>
+
+
+            <button type="submit" class="btn btn-primary">Submit</button>
+
+
+        </form>
+
+        </div>
     </div>
 </body>
 </html>
