--- a/src/main/resources/templates/admin/authorForm.html
+++ b/src/main/resources/templates/admin/authorForm.html
@@ -21,6 +21,49 @@
             </div>
 
 
+            <div class="form-group row">
+                <label for="dob" class="col-sm-2 form-label">Date Of Birth</label>
+                <div class="col-sm-8">
+                    <input id="dob" th:field="*{dataOfBirth}" type="date" class="form-control">
+
+                    <p th:if="${#fields.errors('dataOfBirth')}"
+                       class="text-danger" th:errors="*{dataOfBirth}"></p>
+                </div>
+            </div>
+
+
+            <div class="form-group row">
+                <label for="email" class="col-sm-2 form-label">Email</label>
+                <div class="col-sm-8">
+                    <input id="email" th:field="*{email}" type="email" class="form-control">
+
+                    <p th:if="${#fields.errors('email')}"
+                       class="text-danger" th:errors="*{email}"></p>
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <label for="sname" class="col-sm-2 form-label">Street Name</label>
+                <div class="col-sm-8">
+                    <input id="sname" th:field="*{address.streetName}" type="text" class="form-control">
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <label for="city" class="col-sm-2 form-label">City</label>
+                <div class="col-sm-8">
+                    <input id="city" th:field="*{address.city}" type="text" class="form-control">
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <label for="zip" class="col-sm-2 form-label">Zip Code</label>
+                <div class="col-sm-8">
+                    <input id="zip" th:field="*{address.zipCode}" type="text" class="form-control">
+                </div>
+            </div>
+
+
             <button type="submit" class="btn btn-primary">Submit</button>
 
 
